# tg_bot_1

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: automation.yml
tg_bot_1/: .env.example  main.py
tg_bot_1/config_data/: config.py
tg_bot_1/database/: database.py
tg_bot_1/handlers/: other_handlers.py  user_handlers.py
tg_bot_1/keyboards/: keyboard.py  set_menu.py
tg_bot_1/lexicon/: lexicon.py
